[tool.poetry]
name = "dashboard-python"
version = "0.1.0"
description = ""
authors = ["Guiherme <dbagui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.14.2"
plotly = "^5.18.0"
pandas = "^2.1.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
